--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,7 +15,7 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v3
 
-    - name: Install MinGW (für Windows-Binaries unter Linux)
+    - name: Install MinGW
       run: sudo apt-get update && sudo apt-get install -y mingw-w64
 
     - name: Compile wait.c to wait.exe
