--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,7 +19,14 @@ jobs:
       run: sudo apt-get update && sudo apt-get install -y mingw-w64
 
     - name: Compile wait.c to wait.exe
-      run: x86_64-w64-mingw32-gcc -Os -s -o wait.exe wait.c
+      run: x86_64-w64-mingw32-gcc -Os -s -o wait.exe wait.c \
+          -ffunction-sections \
+          -fdata-sections \
+          -Wl,--gc-sections \
+          -fno-ident \
+          -fomit-frame-pointer \
+          -flto
+
 
     - name: Generate SHA256 checksum
       run: sha256sum wait.exe > wait.exe.sha256
