--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,7 +6,9 @@ on:
       - 'wait.c'
       - '.github/workflows/build.yml'
   workflow_dispatch:
-
+permissions:
+  contents: write
+  
 jobs:
   build:
     runs-on: ubuntu-latest
