--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build wait.exe
+name: Build wait in all OS variants
 
 on:
   push:
@@ -6,11 +6,13 @@ on:
       - 'wait.c'
       - '.github/workflows/build.yml'
   workflow_dispatch:
+
 permissions:
   contents: write
-  
+
 jobs:
-  build:
+  build-windows:
+    name: Windows (cross-compile)
     runs-on: ubuntu-latest
 
     steps:
@@ -23,7 +25,6 @@ jobs:
     - name: Compile wait.c to wait.exe
       run: x86_64-w64-mingw32-gcc -Os -s -ffunction-sections -fdata-sections -Wl,--gc-sections -fno-ident -fomit-frame-pointer -flto -o wait.exe wait.c
 
-
     - name: Generate SHA256 checksum
       run: sha256sum wait.exe > wait.exe.sha256
 
@@ -35,3 +36,50 @@ jobs:
       with:
         commit_message: "🔧 Build wait.exe and generate SHA256"
         file_pattern: bin/wait.exe bin/wait.exe.sha256
+
+  build-linux:
+    name: Linux
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v3
+
+    - name: Compile wait.c
+      run: |
+        gcc -Os -s -o wait wait.c
+
+    - name: Generate SHA256 checksum
+      run: sha256sum wait > wait.sha256
+
+    - name: Create bin folder
+      run: mkdir -p bin && mv wait wait.sha256 bin/
+
+    - name: Upload to repository
+      uses: stefanzweifel/git-auto-commit-action@v5
+      with:
+        commit_message: "🐧 Build wait (Linux) and generate SHA256"
+        file_pattern: bin/wait bin/wait.sha256
+
+  build-macos:
+    name: macOS
+    runs-on: macos-latest
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v3
+
+    - name: Compile wait.c
+      run: clang -Os -s -o wait-macos wait.c
+
+    - name: Generate SHA256 checksum
+      run: shasum -a 256 wait-macos > wait-macos.sha256
+
+    - name: Create bin folder
+      run: mkdir -p bin && mv wait-macos wait-macos.sha256 bin/
+
+    - name: Upload to repository
+      uses: stefanzweifel/git-auto-commit-action@v5
+      with:
+        commit_message: "🍎 Build wait-macos and generate SHA256"
+        file_pattern: bin/wait-macos bin/wait-macos.sha256
