Add artifact upload steps to build workflows
Added steps to upload built binaries and their SHA256 checksum files as artifacts in the Linux, macOS, and Windows GitHub Actions workflows. This allows for easier access to build outputs after CI runs.

--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -30,3 +30,15 @@ jobs:
       with:
         commit_message: "🐧 Build wait (Linux) and generate SHA256"
         file_pattern: bin/wait bin/wait.sha256
+
+    - name: Upload wait.exe
+      uses: actions/upload-artifact@v4
+      with:
+        name: wait
+        path: bin/wait
+
+    - name: Upload sha256
+      uses: actions/upload-artifact@v4
+      with:
+        name: wait.sha256
+        path: bin/wait.sha256
